--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "responsive-preview",
+  "name": "responsive-preview-sb",
   "version": "1.0.0",
   "description": "A React component for toggling between web table, and mobile views",
   "main": "dist/index.js",
