--- a/package.json
+++ b/package.json
@@ -1,14 +1,9 @@
 {
   "name": "responsive-preview-sb",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A React component for toggling between web table, and mobile views",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "scripts": {
-    "build": "tsc",
-    "prepare": "npm run build",
-    "test": "jest"
-  },
   "keywords": [
     "react",
     "responsive",
@@ -20,11 +15,21 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^29.5.0",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "jest": "^29.5.0",
-    "ts-jest": "^29.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.27.0",
+    "@typescript-eslint/parser": "^8.27.0",
+    "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.4",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.0",
+    "prettier": "3.5.3",
+    "stylelint": "^16.16.0",
     "typescript": "^4.9.5"
   }
 }
