--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "desktop",
     "toggle"
   ],
-  "author": "",
+  "author": "이서빈 <leeseobin000709@gmail.com> (https://github.com/leeseobin00)",
   "license": "MIT",
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
@@ -31,5 +31,338 @@
     "prettier": "3.5.3",
     "stylelint": "^16.16.0",
     "typescript": "^4.9.5"
-  }
+  },
+  "dependencies": {
+    "acorn": "^8.14.1",
+    "acorn-jsx": "^5.3.2",
+    "ajv": "^8.17.1",
+    "ansi-escapes": "^7.0.0",
+    "ansi-regex": "^6.1.0",
+    "ansi-styles": "^6.2.1",
+    "argparse": "^2.0.1",
+    "array-buffer-byte-length": "^1.0.2",
+    "array-ify": "^1.0.0",
+    "array-includes": "^3.1.8",
+    "array-union": "^2.1.0",
+    "array.prototype.findlast": "^1.2.5",
+    "array.prototype.flat": "^1.3.3",
+    "array.prototype.flatmap": "^1.3.3",
+    "array.prototype.tosorted": "^1.1.4",
+    "arraybuffer.prototype.slice": "^1.0.4",
+    "astral-regex": "^2.0.0",
+    "async-function": "^1.0.0",
+    "available-typed-arrays": "^1.0.7",
+    "balanced-match": "^1.0.2",
+    "base64-js": "^1.5.1",
+    "brace-expansion": "^2.0.1",
+    "braces": "^3.0.3",
+    "buffer": "^6.0.3",
+    "cacheable": "^1.8.9",
+    "call-bind": "^1.0.8",
+    "call-bind-apply-helpers": "^1.0.2",
+    "call-bound": "^1.0.4",
+    "callsites": "^3.1.0",
+    "chalk": "^5.4.1",
+    "cli-cursor": "^5.0.0",
+    "cli-truncate": "^4.0.0",
+    "cliui": "^8.0.1",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "colord": "^2.9.3",
+    "colorette": "^2.0.20",
+    "commander": "^13.1.0",
+    "compare-func": "^2.0.0",
+    "concat-map": "^0.0.1",
+    "conventional-changelog-angular": "^7.0.0",
+    "conventional-changelog-conventionalcommits": "^7.0.2",
+    "conventional-commits-parser": "^5.0.0",
+    "cosmiconfig": "^9.0.0",
+    "cross-spawn": "^7.0.6",
+    "css-functions-list": "^3.2.3",
+    "css-tree": "^3.1.0",
+    "cssesc": "^3.0.0",
+    "csstype": "^3.1.3",
+    "dargs": "^8.1.0",
+    "data-view-buffer": "^1.0.2",
+    "data-view-byte-length": "^1.0.2",
+    "data-view-byte-offset": "^1.0.1",
+    "debug": "^4.4.0",
+    "deep-is": "^0.1.4",
+    "define-data-property": "^1.1.4",
+    "define-properties": "^1.2.1",
+    "dir-glob": "^3.0.1",
+    "doctrine": "^2.1.0",
+    "dot-prop": "^5.3.0",
+    "dunder-proto": "^1.0.1",
+    "emoji-regex": "^10.4.0",
+    "env-paths": "^2.2.1",
+    "environment": "^1.1.0",
+    "error-ex": "^1.3.2",
+    "es-abstract": "^1.23.9",
+    "es-define-property": "^1.0.1",
+    "es-errors": "^1.3.0",
+    "es-iterator-helpers": "^1.2.1",
+    "es-object-atoms": "^1.1.1",
+    "es-set-tostringtag": "^2.1.0",
+    "es-shim-unscopables": "^1.1.0",
+    "es-to-primitive": "^1.3.0",
+    "escalade": "^3.2.0",
+    "escape-string-regexp": "^4.0.0",
+    "eslint-scope": "^8.3.0",
+    "eslint-visitor-keys": "^3.4.3",
+    "espree": "^10.3.0",
+    "esquery": "^1.6.0",
+    "esrecurse": "^4.3.0",
+    "estraverse": "^5.3.0",
+    "esutils": "^2.0.3",
+    "eventemitter3": "^5.0.1",
+    "execa": "^8.0.1",
+    "fast-deep-equal": "^3.1.3",
+    "fast-diff": "^1.3.0",
+    "fast-glob": "^3.3.3",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-levenshtein": "^2.0.6",
+    "fast-uri": "^3.0.6",
+    "fastest-levenshtein": "^1.0.16",
+    "fastq": "^1.19.1",
+    "file-entry-cache": "^8.0.0",
+    "fill-range": "^7.1.1",
+    "find-up": "^7.0.0",
+    "flat-cache": "^4.0.1",
+    "flatted": "^3.3.3",
+    "for-each": "^0.3.5",
+    "function-bind": "^1.1.2",
+    "function.prototype.name": "^1.1.8",
+    "functions-have-names": "^1.2.3",
+    "get-caller-file": "^2.0.5",
+    "get-east-asian-width": "^1.3.0",
+    "get-intrinsic": "^1.3.0",
+    "get-proto": "^1.0.1",
+    "get-stream": "^8.0.1",
+    "get-symbol-description": "^1.1.0",
+    "git-raw-commits": "^4.0.0",
+    "glob-parent": "^6.0.2",
+    "global-directory": "^4.0.1",
+    "global-modules": "^2.0.0",
+    "global-prefix": "^3.0.0",
+    "globals": "^14.0.0",
+    "globalthis": "^1.0.4",
+    "globby": "^11.1.0",
+    "globjoin": "^0.1.4",
+    "gopd": "^1.2.0",
+    "graphemer": "^1.4.0",
+    "has-bigints": "^1.1.0",
+    "has-flag": "^4.0.0",
+    "has-property-descriptors": "^1.0.2",
+    "has-proto": "^1.2.0",
+    "has-symbols": "^1.1.0",
+    "has-tostringtag": "^1.0.2",
+    "hasown": "^2.0.2",
+    "hookified": "^1.8.1",
+    "html-tags": "^3.3.1",
+    "human-signals": "^5.0.0",
+    "ieee754": "^1.2.1",
+    "ignore": "^5.3.2",
+    "import-fresh": "^3.3.1",
+    "import-meta-resolve": "^4.1.0",
+    "imurmurhash": "^0.1.4",
+    "ini": "^4.1.1",
+    "internal-slot": "^1.1.0",
+    "is-array-buffer": "^3.0.5",
+    "is-arrayish": "^0.2.1",
+    "is-async-function": "^2.1.1",
+    "is-bigint": "^1.1.0",
+    "is-boolean-object": "^1.2.2",
+    "is-callable": "^1.2.7",
+    "is-core-module": "^2.16.1",
+    "is-data-view": "^1.0.2",
+    "is-date-object": "^1.1.0",
+    "is-extglob": "^2.1.1",
+    "is-finalizationregistry": "^1.1.1",
+    "is-fullwidth-code-point": "^4.0.0",
+    "is-generator-function": "^1.1.0",
+    "is-glob": "^4.0.3",
+    "is-map": "^2.0.3",
+    "is-number": "^7.0.0",
+    "is-number-object": "^1.1.1",
+    "is-obj": "^2.0.0",
+    "is-plain-object": "^5.0.0",
+    "is-regex": "^1.2.1",
+    "is-set": "^2.0.3",
+    "is-shared-array-buffer": "^1.0.4",
+    "is-stream": "^3.0.0",
+    "is-string": "^1.1.1",
+    "is-symbol": "^1.1.1",
+    "is-text-path": "^2.0.0",
+    "is-typed-array": "^1.1.15",
+    "is-weakmap": "^2.0.2",
+    "is-weakref": "^1.1.1",
+    "is-weakset": "^2.0.4",
+    "isarray": "^2.0.5",
+    "isexe": "^2.0.0",
+    "iterator.prototype": "^1.1.5",
+    "jiti": "^2.4.2",
+    "js-tokens": "^4.0.0",
+    "js-yaml": "^4.1.0",
+    "json-buffer": "^3.0.1",
+    "json-parse-even-better-errors": "^2.3.1",
+    "json-schema-traverse": "^1.0.0",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "jsonparse": "^1.3.1",
+    "JSONStream": "^1.3.5",
+    "jsx-ast-utils": "^3.3.5",
+    "keyv": "^4.5.4",
+    "kind-of": "^6.0.3",
+    "known-css-properties": "^0.35.0",
+    "levn": "^0.4.1",
+    "lilconfig": "^3.1.3",
+    "lines-and-columns": "^1.2.4",
+    "listr2": "^8.2.5",
+    "locate-path": "^7.2.0",
+    "lodash.camelcase": "^4.3.0",
+    "lodash.isplainobject": "^4.0.6",
+    "lodash.kebabcase": "^4.1.1",
+    "lodash.merge": "^4.6.2",
+    "lodash.mergewith": "^4.6.2",
+    "lodash.snakecase": "^4.1.1",
+    "lodash.startcase": "^4.4.0",
+    "lodash.truncate": "^4.4.2",
+    "lodash.uniq": "^4.5.0",
+    "lodash.upperfirst": "^4.3.1",
+    "log-update": "^6.1.0",
+    "loose-envify": "^1.4.0",
+    "math-intrinsics": "^1.1.0",
+    "mathml-tag-names": "^2.1.3",
+    "mdn-data": "^2.12.2",
+    "meow": "^12.1.1",
+    "merge-stream": "^2.0.0",
+    "merge2": "^1.4.1",
+    "micromatch": "^4.0.8",
+    "mimic-fn": "^4.0.0",
+    "mimic-function": "^5.0.1",
+    "minimatch": "^9.0.5",
+    "minimist": "^1.2.8",
+    "ms": "^2.1.3",
+    "nanoid": "^3.3.11",
+    "natural-compare": "^1.4.0",
+    "normalize-path": "^3.0.0",
+    "npm-run-path": "^5.3.0",
+    "object-assign": "^4.1.1",
+    "object-inspect": "^1.13.4",
+    "object-keys": "^1.1.1",
+    "object.assign": "^4.1.7",
+    "object.entries": "^1.1.9",
+    "object.fromentries": "^2.0.8",
+    "object.values": "^1.2.1",
+    "onetime": "^6.0.0",
+    "optionator": "^0.9.4",
+    "own-keys": "^1.0.1",
+    "p-limit": "^4.0.0",
+    "p-locate": "^6.0.0",
+    "parent-module": "^1.0.1",
+    "parse-json": "^5.2.0",
+    "path-exists": "^5.0.0",
+    "path-key": "^3.1.1",
+    "path-parse": "^1.0.7",
+    "path-type": "^4.0.0",
+    "picocolors": "^1.1.1",
+    "picomatch": "^2.3.1",
+    "pidtree": "^0.6.0",
+    "possible-typed-array-names": "^1.1.0",
+    "postcss": "^8.5.3",
+    "postcss-resolve-nested-selector": "^0.1.6",
+    "postcss-safe-parser": "^7.0.1",
+    "postcss-selector-parser": "^7.1.0",
+    "postcss-value-parser": "^4.2.0",
+    "prelude-ls": "^1.2.1",
+    "prettier-linter-helpers": "^1.0.0",
+    "prop-types": "^15.8.1",
+    "punycode": "^2.3.1",
+    "queue-microtask": "^1.2.3",
+    "react-is": "^16.13.1",
+    "reflect.getprototypeof": "^1.0.10",
+    "regexp.prototype.flags": "^1.5.4",
+    "require-directory": "^2.1.1",
+    "require-from-string": "^2.0.2",
+    "resolve": "^2.0.0-next.5",
+    "resolve-from": "^5.0.0",
+    "restore-cursor": "^5.1.0",
+    "reusify": "^1.1.0",
+    "rfdc": "^1.4.1",
+    "run-parallel": "^1.2.0",
+    "safe-array-concat": "^1.1.3",
+    "safe-push-apply": "^1.0.0",
+    "safe-regex-test": "^1.1.0",
+    "semver": "^7.7.1",
+    "set-function-length": "^1.2.2",
+    "set-function-name": "^2.0.2",
+    "set-proto": "^1.0.0",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "side-channel": "^1.1.0",
+    "side-channel-list": "^1.0.0",
+    "side-channel-map": "^1.0.1",
+    "side-channel-weakmap": "^1.0.2",
+    "signal-exit": "^4.1.0",
+    "slash": "^3.0.0",
+    "slice-ansi": "^5.0.0",
+    "source-map-js": "^1.2.1",
+    "split2": "^4.2.0",
+    "string-argv": "^0.3.2",
+    "string-width": "^7.2.0",
+    "string.prototype.matchall": "^4.0.12",
+    "string.prototype.repeat": "^1.0.0",
+    "string.prototype.trim": "^1.2.10",
+    "string.prototype.trimend": "^1.0.9",
+    "string.prototype.trimstart": "^1.0.8",
+    "strip-ansi": "^7.1.0",
+    "strip-final-newline": "^3.0.0",
+    "strip-json-comments": "^3.1.1",
+    "supports-color": "^7.2.0",
+    "supports-hyperlinks": "^3.2.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "svg-tags": "^1.0.0",
+    "synckit": "^0.10.2",
+    "table": "^6.9.0",
+    "text-extensions": "^2.4.0",
+    "through": "^2.3.8",
+    "tinyexec": "^0.3.2",
+    "to-regex-range": "^5.0.1",
+    "ts-api-utils": "^2.1.0",
+    "tslib": "^2.8.1",
+    "type-check": "^0.4.0",
+    "typed-array-buffer": "^1.0.3",
+    "typed-array-byte-length": "^1.0.3",
+    "typed-array-byte-offset": "^1.0.4",
+    "typed-array-length": "^1.0.7",
+    "unbox-primitive": "^1.1.0",
+    "undici-types": "^6.20.0",
+    "unicorn-magic": "^0.1.0",
+    "uri-js": "^4.4.1",
+    "util-deprecate": "^1.0.2",
+    "which": "^2.0.2",
+    "which-boxed-primitive": "^1.1.1",
+    "which-builtin-type": "^1.2.1",
+    "which-collection": "^1.0.2",
+    "which-typed-array": "^1.1.19",
+    "word-wrap": "^1.2.5",
+    "wrap-ansi": "^9.0.0",
+    "write-file-atomic": "^5.0.1",
+    "y18n": "^5.0.8",
+    "yaml": "^2.7.0",
+    "yargs": "^17.7.2",
+    "yargs-parser": "^21.1.1",
+    "yocto-queue": "^1.2.1"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/leeseobin00/responsive-preview-sb.git"
+  },
+  "bugs": {
+    "url": "https://github.com/leeseobin00/responsive-preview-sb/issues"
+  },
+  "homepage": "https://github.com/leeseobin00/responsive-preview-sb#readme"
 }
