--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "responsive-preview-sb",
-  "version": "1.0.1",
+  "version": "1.0.7",
   "description": "A React component for toggling between web table, and mobile views",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -11,6 +11,9 @@
     "mobile",
     "desktop",
     "toggle"
+  ],
+  "files": [
+    "dist"
   ],
   "author": "이서빈 <leeseobin000709@gmail.com> (https://github.com/leeseobin00)",
   "license": "MIT",
@@ -29,6 +32,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.5.0",
     "prettier": "3.5.3",
+    "sass": "^1.86.0",
     "stylelint": "^16.16.0",
     "typescript": "^4.9.5"
   },
@@ -44,10 +48,8 @@
     "array-ify": "^1.0.0",
     "array-includes": "^3.1.8",
     "array-union": "^2.1.0",
-    "array.prototype.findlast": "^1.2.5",
     "array.prototype.flat": "^1.3.3",
     "array.prototype.flatmap": "^1.3.3",
-    "array.prototype.tosorted": "^1.1.4",
     "arraybuffer.prototype.slice": "^1.0.4",
     "astral-regex": "^2.0.0",
     "async-function": "^1.0.0",
@@ -61,7 +63,6 @@
     "call-bind": "^1.0.8",
     "call-bind-apply-helpers": "^1.0.2",
     "call-bound": "^1.0.4",
-    "callsites": "^3.1.0",
     "chalk": "^5.4.1",
     "cli-cursor": "^5.0.0",
     "cli-truncate": "^4.0.0",
@@ -112,9 +113,7 @@
     "eslint-visitor-keys": "^3.4.3",
     "espree": "^10.3.0",
     "esquery": "^1.6.0",
-    "esrecurse": "^4.3.0",
     "estraverse": "^5.3.0",
-    "esutils": "^2.0.3",
     "eventemitter3": "^5.0.1",
     "execa": "^8.0.1",
     "fast-deep-equal": "^3.1.3",
@@ -124,7 +123,6 @@
     "fast-levenshtein": "^2.0.6",
     "fast-uri": "^3.0.6",
     "fastest-levenshtein": "^1.0.16",
-    "fastq": "^1.19.1",
     "file-entry-cache": "^8.0.0",
     "fill-range": "^7.1.1",
     "find-up": "^7.0.0",
@@ -146,11 +144,7 @@
     "global-modules": "^2.0.0",
     "global-prefix": "^3.0.0",
     "globals": "^14.0.0",
-    "globalthis": "^1.0.4",
     "globby": "^11.1.0",
-    "globjoin": "^0.1.4",
-    "gopd": "^1.2.0",
-    "graphemer": "^1.4.0",
     "has-bigints": "^1.1.0",
     "has-flag": "^4.0.0",
     "has-property-descriptors": "^1.0.2",
@@ -158,7 +152,6 @@
     "has-symbols": "^1.1.0",
     "has-tostringtag": "^1.0.2",
     "hasown": "^2.0.2",
-    "hookified": "^1.8.1",
     "html-tags": "^3.3.1",
     "human-signals": "^5.0.0",
     "ieee754": "^1.2.1",
@@ -169,7 +162,6 @@
     "ini": "^4.1.1",
     "internal-slot": "^1.1.0",
     "is-array-buffer": "^3.0.5",
-    "is-arrayish": "^0.2.1",
     "is-async-function": "^2.1.1",
     "is-bigint": "^1.1.0",
     "is-boolean-object": "^1.2.2",
@@ -177,9 +169,6 @@
     "is-core-module": "^2.16.1",
     "is-data-view": "^1.0.2",
     "is-date-object": "^1.1.0",
-    "is-extglob": "^2.1.1",
-    "is-finalizationregistry": "^1.1.1",
-    "is-fullwidth-code-point": "^4.0.0",
     "is-generator-function": "^1.1.0",
     "is-glob": "^4.0.3",
     "is-map": "^2.0.3",
@@ -208,31 +197,23 @@
     "json-parse-even-better-errors": "^2.3.1",
     "json-schema-traverse": "^1.0.0",
     "json-stable-stringify-without-jsonify": "^1.0.1",
-    "jsonparse": "^1.3.1",
     "JSONStream": "^1.3.5",
     "jsx-ast-utils": "^3.3.5",
     "keyv": "^4.5.4",
     "kind-of": "^6.0.3",
     "known-css-properties": "^0.35.0",
-    "levn": "^0.4.1",
     "lilconfig": "^3.1.3",
     "lines-and-columns": "^1.2.4",
     "listr2": "^8.2.5",
     "locate-path": "^7.2.0",
     "lodash.camelcase": "^4.3.0",
     "lodash.isplainobject": "^4.0.6",
-    "lodash.kebabcase": "^4.1.1",
     "lodash.merge": "^4.6.2",
-    "lodash.mergewith": "^4.6.2",
-    "lodash.snakecase": "^4.1.1",
-    "lodash.startcase": "^4.4.0",
     "lodash.truncate": "^4.4.2",
     "lodash.uniq": "^4.5.0",
-    "lodash.upperfirst": "^4.3.1",
     "log-update": "^6.1.0",
     "loose-envify": "^1.4.0",
     "math-intrinsics": "^1.1.0",
-    "mathml-tag-names": "^2.1.3",
     "mdn-data": "^2.12.2",
     "meow": "^12.1.1",
     "merge-stream": "^2.0.0",
@@ -252,7 +233,6 @@
     "object-keys": "^1.1.1",
     "object.assign": "^4.1.7",
     "object.entries": "^1.1.9",
-    "object.fromentries": "^2.0.8",
     "object.values": "^1.2.1",
     "onetime": "^6.0.0",
     "optionator": "^0.9.4",
@@ -267,7 +247,6 @@
     "path-type": "^4.0.0",
     "picocolors": "^1.1.1",
     "picomatch": "^2.3.1",
-    "pidtree": "^0.6.0",
     "possible-typed-array-names": "^1.1.0",
     "postcss": "^8.5.3",
     "postcss-resolve-nested-selector": "^0.1.6",
@@ -287,7 +266,6 @@
     "resolve": "^2.0.0-next.5",
     "resolve-from": "^5.0.0",
     "restore-cursor": "^5.1.0",
-    "reusify": "^1.1.0",
     "rfdc": "^1.4.1",
     "run-parallel": "^1.2.0",
     "safe-array-concat": "^1.1.3",
@@ -310,11 +288,8 @@
     "split2": "^4.2.0",
     "string-argv": "^0.3.2",
     "string-width": "^7.2.0",
-    "string.prototype.matchall": "^4.0.12",
     "string.prototype.repeat": "^1.0.0",
     "string.prototype.trim": "^1.2.10",
-    "string.prototype.trimend": "^1.0.9",
-    "string.prototype.trimstart": "^1.0.8",
     "strip-ansi": "^7.1.0",
     "strip-final-newline": "^3.0.0",
     "strip-json-comments": "^3.1.1",
@@ -326,7 +301,6 @@
     "table": "^6.9.0",
     "text-extensions": "^2.4.0",
     "through": "^2.3.8",
-    "tinyexec": "^0.3.2",
     "to-regex-range": "^5.0.1",
     "ts-api-utils": "^2.1.0",
     "tslib": "^2.8.1",
@@ -355,6 +329,7 @@
     "yocto-queue": "^1.2.1"
   },
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
